--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'kotlin-android-extensions'
 
 kotlin {
@@ -26,9 +28,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
+    kapt "com.android.databinding:compiler:$gradlePluginVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.23.4"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.23.4'
 
